// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Breadcrumbs All With Custom Separator 1`] = `
.emotion-25 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-4 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: none;
  }
}

.emotion-3 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-3:hover {
  opacity: 0.8;
}

.emotion-2 {
  margin-right: 4px;
}

.emotion-24 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-24 {
    display: block;
  }
}

.emotion-23 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-11 {
  display: inline;
}

.emotion-7 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:hover {
  opacity: 0.8;
}

.emotion-7:visited {
  color: inherit;
}

.emotion-6 {
  display: inline-block;
  width: 1.25em;
  height: 1em;
  color: #6F7175;
}

.emotion-5 {
  display: block;
  fill: #6F7175;
  stroke: #6F7175;
}

.emotion-10 {
  display: inline-block;
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-22 {
  display: inline;
  color: #000000;
}

.emotion-1 {
  display: inline-block;
  width: 0.9em;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0.75turn);
  -ms-transform: rotate(0.75turn);
  transform: rotate(0.75turn);
  fill: #000000;
}

.emotion-8 {
  display: block;
  -webkit-transform: rotate(0.25turn);
  -ms-transform: rotate(0.25turn);
  transform: rotate(0.25turn);
  fill: #6F7175;
}

<div
  className="emotion-25"
>
  <div
    className="emotion-4"
  >
    <a
      className="emotion-3"
      href="/gas-electricity/guides"
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </span>
      Guides
    </a>
  </div>
  <div
    className="emotion-24"
  >
    <ul
      className="emotion-23"
    >
      <li
        className="emotion-11"
      >
        <a
          className="emotion-7"
          href="/"
        >
          <div
            className="emotion-6"
          >
            <svg
              className="emotion-5"
              viewBox="0 0 14 14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
              />
            </svg>
          </div>
        </a>
        <span
          className="emotion-10"
        >
          <span
            className="emotion-1"
          >
            <svg
              className="emotion-8"
              viewBox="0 0 120 120"
            >
              <path
                d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        className="emotion-11"
      >
        <a
          className="emotion-7"
          href="/gas-electricity/"
        >
          Gas & Electricity
        </a>
        <span
          className="emotion-10"
        >
          <span
            className="emotion-1"
          >
            <svg
              className="emotion-8"
              viewBox="0 0 120 120"
            >
              <path
                d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        className="emotion-11"
      >
        <a
          className="emotion-7"
          href="/gas-electricity/guides"
        >
          Guides
        </a>
        <span
          className="emotion-10"
        >
          <span
            className="emotion-1"
          >
            <svg
              className="emotion-8"
              viewBox="0 0 120 120"
            >
              <path
                d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        className="emotion-22"
      >
        Understanding energy bills and electricity bills - FAQs and more
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Custom Home Icon 1`] = `
.emotion-15 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-2 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-1 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-1:hover {
  opacity: 0.8;
}

.emotion-0 {
  margin-right: 4px;
}

.emotion-14 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-14 {
    display: block;
  }
}

.emotion-13 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-5 {
  display: inline;
}

.emotion-3 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3:hover {
  opacity: 0.8;
}

.emotion-3:visited {
  color: inherit;
}

.emotion-4 {
  display: inline-block;
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-12 {
  display: inline;
  color: #000000;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-2"
  >
    <a
      className="emotion-1"
      href="/gas-electricity/guides"
    >
      <span
        className="emotion-0"
      >
        &lt;
      </span>
      Guides
    </a>
  </div>
  <div
    className="emotion-14"
  >
    <ul
      className="emotion-13"
    >
      <li
        className="emotion-5"
      >
        <a
          className="emotion-3"
          href="/"
        >
          Uswitch.com
        </a>
        <span
          className="emotion-4"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-5"
      >
        <a
          className="emotion-3"
          href="/gas-electricity/"
        >
          Gas & Electricity
        </a>
        <span
          className="emotion-4"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-5"
      >
        <a
          className="emotion-3"
          href="/gas-electricity/guides"
        >
          Guides
        </a>
        <span
          className="emotion-4"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-12"
      >
        Understanding energy bills and electricity bills - FAQs and more
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Example With Title 1`] = `
.emotion-17 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-2 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-1 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-1:hover {
  opacity: 0.8;
}

.emotion-0 {
  margin-right: 4px;
}

.emotion-16 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-16 {
    display: block;
  }
}

.emotion-15 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-7 {
  display: inline;
}

.emotion-5 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover {
  opacity: 0.8;
}

.emotion-5:visited {
  color: inherit;
}

.emotion-4 {
  display: inline-block;
  width: 1.25em;
  height: 1em;
  color: #6F7175;
}

.emotion-3 {
  display: block;
  fill: #6F7175;
  stroke: #6F7175;
}

.emotion-6 {
  display: inline-block;
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-14 {
  display: inline;
  color: #000000;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-2"
  >
    <a
      className="emotion-1"
      href="/gas-electricity/guides"
    >
      <span
        className="emotion-0"
      >
        &lt;
      </span>
      Guides
    </a>
  </div>
  <div
    className="emotion-16"
  >
    <ul
      className="emotion-15"
    >
      <li
        className="emotion-7"
      >
        <a
          className="emotion-5"
          href="/"
        >
          <div
            className="emotion-4"
          >
            <svg
              className="emotion-3"
              viewBox="0 0 14 14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
              />
            </svg>
          </div>
        </a>
        <span
          className="emotion-6"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-7"
      >
        <a
          className="emotion-5"
          href="/gas-electricity/"
        >
          Gas & Electricity
        </a>
        <span
          className="emotion-6"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-7"
      >
        <a
          className="emotion-5"
          href="/gas-electricity/guides"
        >
          Guides
        </a>
        <span
          className="emotion-6"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-14"
      >
        Understanding energy bills and electricity bills - FAQs and more
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Example Without Title 1`] = `
.emotion-15 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-2 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-2 {
    display: none;
  }
}

.emotion-1 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-1:hover {
  opacity: 0.8;
}

.emotion-0 {
  margin-right: 4px;
}

.emotion-14 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-14 {
    display: block;
  }
}

.emotion-13 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-7 {
  display: inline;
}

.emotion-5 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover {
  opacity: 0.8;
}

.emotion-5:visited {
  color: inherit;
}

.emotion-4 {
  display: inline-block;
  width: 1.25em;
  height: 1em;
  color: #6F7175;
}

.emotion-3 {
  display: block;
  fill: #6F7175;
  stroke: #6F7175;
}

.emotion-6 {
  display: inline-block;
  margin-left: 4px;
  margin-right: 4px;
}

<div
  className="emotion-15"
>
  <div
    className="emotion-2"
  >
    <a
      className="emotion-1"
      href="/gas-electricity/guides"
    >
      <span
        className="emotion-0"
      >
        &lt;
      </span>
      Guides
    </a>
  </div>
  <div
    className="emotion-14"
  >
    <ul
      className="emotion-13"
    >
      <li
        className="emotion-7"
      >
        <a
          className="emotion-5"
          href="/"
        >
          <div
            className="emotion-4"
          >
            <svg
              className="emotion-3"
              viewBox="0 0 14 14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
              />
            </svg>
          </div>
        </a>
        <span
          className="emotion-6"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-7"
      >
        <a
          className="emotion-5"
          href="/gas-electricity/"
        >
          Gas & Electricity
        </a>
        <span
          className="emotion-6"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-7"
      >
        <a
          className="emotion-5"
          href="/gas-electricity/guides"
        >
          Guides
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs No Crumbs And No Title 1`] = `
.emotion-11 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-4 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: none;
  }
}

.emotion-3 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-3:hover {
  opacity: 0.8;
}

.emotion-0 {
  margin-right: 4px;
}

.emotion-10 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-10 {
    display: block;
  }
}

.emotion-9 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-8 {
  display: inline;
}

.emotion-7 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:hover {
  opacity: 0.8;
}

.emotion-7:visited {
  color: inherit;
}

.emotion-2 {
  display: inline-block;
  width: 1.25em;
  height: 1em;
  color: #6F7175;
}

.emotion-1 {
  display: block;
  fill: #6F7175;
  stroke: #6F7175;
}

<div
  className="emotion-11"
>
  <div
    className="emotion-4"
  >
    <a
      className="emotion-3"
      href="/"
    >
      <span
        className="emotion-0"
      >
        &lt;
      </span>
      <div
        className="emotion-2"
      >
        <svg
          className="emotion-1"
          viewBox="0 0 14 14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    className="emotion-10"
  >
    <ul
      className="emotion-9"
    >
      <li
        className="emotion-8"
      >
        <a
          className="emotion-7"
          href="/"
        >
          <div
            className="emotion-2"
          >
            <svg
              className="emotion-1"
              viewBox="0 0 14 14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
              />
            </svg>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs No Crumbs And Title 1`] = `
.emotion-13 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-4 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-4 {
    display: none;
  }
}

.emotion-3 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-3:hover {
  opacity: 0.8;
}

.emotion-0 {
  margin-right: 4px;
}

.emotion-12 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-12 {
    display: block;
  }
}

.emotion-11 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-9 {
  display: inline;
}

.emotion-7 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:hover {
  opacity: 0.8;
}

.emotion-7:visited {
  color: inherit;
}

.emotion-2 {
  display: inline-block;
  width: 1.25em;
  height: 1em;
  color: #6F7175;
}

.emotion-1 {
  display: block;
  fill: #6F7175;
  stroke: #6F7175;
}

.emotion-8 {
  display: inline-block;
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-10 {
  display: inline;
  color: #000000;
}

<div
  className="emotion-13"
>
  <div
    className="emotion-4"
  >
    <a
      className="emotion-3"
      href="/"
    >
      <span
        className="emotion-0"
      >
        &lt;
      </span>
      <div
        className="emotion-2"
      >
        <svg
          className="emotion-1"
          viewBox="0 0 14 14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    className="emotion-12"
  >
    <ul
      className="emotion-11"
    >
      <li
        className="emotion-9"
      >
        <a
          className="emotion-7"
          href="/"
        >
          <div
            className="emotion-2"
          >
            <svg
              className="emotion-1"
              viewBox="0 0 14 14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
              />
            </svg>
          </div>
        </a>
        <span
          className="emotion-8"
        >
          &gt;
        </span>
      </li>
      <li
        className="emotion-10"
      >
        Understanding energy bills and electricity bills - FAQs and more
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Elements|Breadcrumbs Nothing With Custom Separator 1`] = `
.emotion-13 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: #000000;
}

.emotion-6 {
  display: block;
}

@media screen and (min-width:768px) {
  .emotion-6 {
    display: none;
  }
}

.emotion-5 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  display: inline-block;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
}

.emotion-5:hover {
  opacity: 0.8;
}

.emotion-2 {
  margin-right: 4px;
}

.emotion-12 {
  display: none;
}

@media screen and (min-width:768px) {
  .emotion-12 {
    display: block;
  }
}

.emotion-11 {
  list-style-type: none;
  padding-left: 0;
  font-size: 12px;
  color: #6F7175;
}

.emotion-10 {
  display: inline;
}

.emotion-9 {
  color: inherit;
  stroke: currentColor;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  color: inherit;
  stroke: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:hover {
  opacity: 0.8;
}

.emotion-9:visited {
  color: inherit;
}

.emotion-4 {
  display: inline-block;
  width: 1.25em;
  height: 1em;
  color: #6F7175;
}

.emotion-3 {
  display: block;
  fill: #6F7175;
  stroke: #6F7175;
}

.emotion-1 {
  display: inline-block;
  width: 0.9em;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0.75turn);
  -ms-transform: rotate(0.75turn);
  transform: rotate(0.75turn);
  fill: #000000;
}

<div
  className="emotion-13"
>
  <div
    className="emotion-6"
  >
    <a
      className="emotion-5"
      href="/"
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </span>
      <div
        className="emotion-4"
      >
        <svg
          className="emotion-3"
          viewBox="0 0 14 14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
          />
        </svg>
      </div>
    </a>
  </div>
  <div
    className="emotion-12"
  >
    <ul
      className="emotion-11"
    >
      <li
        className="emotion-10"
      >
        <a
          className="emotion-9"
          href="/"
        >
          <div
            className="emotion-4"
          >
            <svg
              className="emotion-3"
              viewBox="0 0 14 14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.87861 1.63215C7.48808 1.24162 6.85492 1.24163 6.46439 1.63215L1.60839 6.48816C1.2934 6.80314 1.51649 7.34171 1.96194 7.34171H3.17884C3.12062 7.46855 3.08817 7.60967 3.08817 7.75837V12.175C3.08817 12.7273 3.53588 13.175 4.08817 13.175H10.2548C10.8071 13.175 11.2548 12.7273 11.2548 12.175V7.75838C11.2548 7.60967 11.2224 7.46855 11.1642 7.34171H12.3811C12.8265 7.34171 13.0496 6.80314 12.7346 6.48815L7.87861 1.63215Z"
              />
            </svg>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
